Added bootstrap styles

--- a/src/main/resources/template/photo.html
+++ b/src/main/resources/template/photo.html
@@ -68,7 +68,7 @@
             window.location.replace("%(allAlbumsUrl)");
         }
     </script>
-    <script src="/swipe.js"></script>
+    <script src="/swipe.js" />
 </center>
 </body>
 </html>
