--- a/src/main/resources/template/albumPhotos.html
+++ b/src/main/resources/template/albumPhotos.html
@@ -1,11 +1,29 @@
 <html>
 <head>
     <title>%(title)</title>
+    <link rel="stylesheet" href="/bootstrap.min.css" />
+    <style>
+        body {background-color: %(bgcolor);}
+        a:link {
+          color: %(linkcolor);
+        }
+        a:visited {
+          color: %(vlinkcolor);
+        }
+    </style>
 </head>
-<body bgcolor="%(bgcolor)" link="%(linkcolor)" vlink="%(vlinkcolor)">
-<center>
-
-%(photos)
-</center>
+<body>
+    <br>
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
+                <table class="table table-hover table-striped table-dark">
+                    <tbody>
+                    %(photos)
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
