Add multi touch fix and proper scaling

--- a/src/main/resources/template/photo.html
+++ b/src/main/resources/template/photo.html
@@ -83,7 +83,7 @@
             window.location.replace("%(allAlbumsUrl)");
         }
     </script>
-    <script src="/swipe.js" />
+    <script src="/swipe.js"></script>
 </center>
 </body>
 </html>
