--- a/src/main/resources/template/photo.html
+++ b/src/main/resources/template/photo.html
@@ -19,7 +19,7 @@
 <body onload=init()>
 <center>
     %(commentIfVideoHtmlStart)
-    <img src="%(mediaRealUrl)" %(mediaStyle) height="%(mediaHeight)%">
+    <img src="%(mediaRealUrl)" style="%(mediaStyle)" height="%(mediaHeight)%">
     %(commentIfVideoHtmlEnd)
     %(commentIfPhotoHtmlStart)
     <video height="%(mediaHeight)%" controls=controls autoplay><source src="%(mediaRealUrl)" type=video/mp4></video>
