add template cycles, create rendering service

--- a/src/main/resources/template/albums.html
+++ b/src/main/resources/template/albums.html
@@ -19,7 +19,7 @@
             <div class="col-md-auto">
                 <table class="table table-hover table-striped table-dark">
                     <tbody>
-                    %(albums)
+                        %(cycle:albums)<tr><th scope="row"><a href="/album/%(album)">%(album)</a></th></tr>%(cycle:albums)
                     </tbody>
                 </table>
             </div>
