--- a/src/main/resources/template/albumPhotos.html
+++ b/src/main/resources/template/albumPhotos.html
@@ -19,7 +19,7 @@
             <div class="col-md-auto">
                 <table class="table table-hover table-striped table-dark">
                     <tbody>
-                    %(photos)
+                        %(cycle:photos)<tr><th scope="row"><a href="%(photoUrl)">%(photo)</a></th></tr>%(cycle:photos)
                     </tbody>
                 </table>
             </div>
