--- a/src/main/resources/template/photo.html
+++ b/src/main/resources/template/photo.html
@@ -56,6 +56,9 @@
                 if (event.keyCode === 27) {
                     window.location.replace("%(mediaUrlNoFullScreen)");
                 }
+                if (event.keyCode === 71) {
+                    window.location.replace("%(mediaUrlNoFullScreen)");
+                }
                 if (event.keyCode === 70) {
                     window.location.replace("%(mediaUrlFullScreen)");
                 }
